// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TargetChangeDialog test sets for same prev tab and newTab values snapshot: render the only information available in prevTab detailsViewId matches current detailsViewId 1`] = `
<DocumentFragment>
  <mock-blockingdialog
    dialogcontentprops="[object Object]"
    hidden="false"
    modalprops="[object Object]"
  >
    <div
      id="target-change-dialog-description"
    >
      <div>
        There is already an assessment running on 
        <mock-styledtooltiphostbase
          calloutprops="[object Object]"
          id="previous-target-page-link"
        />
        . Would you like to continue your current assessment on the new target of 
        <mock-styledtooltiphostbase
          calloutprops="[object Object]"
          content="https://www.abc.com"
          id="current-target-page-link"
        />
        ?
      </div>
      <p>
        <strong>
          Note
        </strong>
        : If 'Continue previous' is selected, the previous assessment will be connected to this new page.
      </p>
      <p>
        If 'Start new' is selected, all previous progress will be lost.
      </p>
    </div>
  </mock-blockingdialog>
</DocumentFragment>
`;

exports[`TargetChangeDialog test sets for same prev tab and newTab values snapshot: render when previous tab info shows app is refreshed 1`] = `
<DocumentFragment>
  <mock-blockingdialog
    dialogcontentprops="[object Object]"
    hidden="false"
    modalprops="[object Object]"
  >
    <div
      id="target-change-dialog-description"
    >
      <div>
        There is already an assessment running on 
        <mock-styledtooltiphostbase
          calloutprops="[object Object]"
          content="https://www.abc.com"
          id="previous-target-page-link"
        />
        . Would you like to continue your current assessment on the new target of 
        <mock-styledtooltiphostbase
          calloutprops="[object Object]"
          content="https://www.def.com"
          id="current-target-page-link"
        />
        ?
      </div>
      <p>
        <strong>
          Note
        </strong>
        : If 'Continue previous' is selected, the previous assessment will be connected to this new page.
      </p>
      <p>
        If 'Start new' is selected, all previous progress will be lost.
      </p>
    </div>
  </mock-blockingdialog>
</DocumentFragment>
`;

exports[`TargetChangeDialog test sets for same prev tab and newTab values snapshot: render when tab ids are same and also url doesn't change 1`] = `
<DocumentFragment>
  <mock-blockingdialog
    dialogcontentprops="[object Object]"
    hidden="false"
    modalprops="[object Object]"
  >
    <div
      id="target-change-dialog-description"
    >
      <div>
        There is already an assessment running on 
        <mock-styledtooltiphostbase
          calloutprops="[object Object]"
          content="https://www.abc.com"
          id="previous-target-page-link"
        />
        . Would you like to continue your current assessment on the new target of 
        <mock-styledtooltiphostbase
          calloutprops="[object Object]"
          content="https://www.abc.com"
          id="current-target-page-link"
        />
        ?
      </div>
      <p>
        <strong>
          Note
        </strong>
        : If 'Continue previous' is selected, the previous assessment will be connected to this new page.
      </p>
      <p>
        If 'Start new' is selected, all previous progress will be lost.
      </p>
    </div>
  </mock-blockingdialog>
</DocumentFragment>
`;

exports[`TargetChangeDialog test sets for same prev tab and newTab values snapshot: render when tab ids are same but url changes 1`] = `
<DocumentFragment>
  <mock-blockingdialog
    dialogcontentprops="[object Object]"
    hidden="false"
    modalprops="[object Object]"
  >
    <div
      id="target-change-dialog-description"
    >
      <div>
        There is already an assessment running on 
        <mock-styledtooltiphostbase
          calloutprops="[object Object]"
          content="https://www.abc.com"
          id="previous-target-page-link"
        />
        . Would you like to continue your current assessment on the new target of 
        <mock-styledtooltiphostbase
          calloutprops="[object Object]"
          content="https://www.def.com"
          id="current-target-page-link"
        />
        ?
      </div>
      <p>
        <strong>
          Note
        </strong>
        : If 'Continue previous' is selected, the previous assessment will be connected to this new page.
      </p>
      <p>
        If 'Start new' is selected, all previous progress will be lost.
      </p>
    </div>
  </mock-blockingdialog>
</DocumentFragment>
`;

exports[`TargetChangeDialog test sets for same prev tab and newTab values snapshot: render when target tab id changed 1`] = `
<DocumentFragment>
  <mock-blockingdialog
    dialogcontentprops="[object Object]"
    hidden="false"
    modalprops="[object Object]"
  >
    <div
      id="target-change-dialog-description"
    >
      <div>
        There is already an assessment running on 
        <mock-styledtooltiphostbase
          calloutprops="[object Object]"
          content="https://www.abc.com"
          id="previous-target-page-link"
        />
        . Would you like to continue your current assessment on the new target of 
        <mock-styledtooltiphostbase
          calloutprops="[object Object]"
          content="https://www.def.com"
          id="current-target-page-link"
        />
        ?
      </div>
      <p>
        <strong>
          Note
        </strong>
        : If 'Continue previous' is selected, the previous assessment will be connected to this new page.
      </p>
      <p>
        If 'Start new' is selected, all previous progress will be lost.
      </p>
    </div>
  </mock-blockingdialog>
</DocumentFragment>
`;
